# StarlightVK

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: _fixes.hpp.C475FDA3F9A723C6.idx  _vectorize.hpp.AF8157AD61EC586D.idx  common.hpp.C1C7B0D4ED832044.idx  compute_common.hpp.822F7E154D6C520D.idx  compute_vector_decl.hpp.A61ADAB77BBC1DA1.idx  compute_vector_relational.hpp.D58151B054D988AD.idx  constants.hpp.5B81FC9F946001AC.idx  constants.inl.DCF26AAED26DBE75.idx  context.c.D33A5E4601F9CC1D.idx  dual_quaternion.hpp.DC1D383D045CA86C.idx  dual_quaternion.inl.A1F886F6680C6F19.idx  egl_context.c.6ABE3164A2F23EB8.idx  epsilon.hpp.B16168A6182D44DF.idx  epsilon.inl.5A1715A5AF6BFDED.idx  exponential.hpp.91BEE7B6A9558AA7.idx  func_common.inl.99D5A9B2FE2A1BA0.idx  func_exponential.inl.A133130746F1FDB4.idx  func_geometric.inl.DBFC8BD0600AD3B0.idx  func_integer.inl.465D3886313F8A52.idx  func_matrix.inl.384C49CD54D73669.idx  func_packing.inl.D2030231E68B1532.idx  func_trigonometric.inl.606B3905140B6C01.idx  func_vector_relational.inl.F992A2899B18D321.idx  fwd.hpp.FE3CC8E8E162545C.idx  geometric.hpp.EAF4D14457BE9849.idx  glfw3.h.ECD2F0BF30BD5931.idx  glfw3native.h.954058A9B63937E8.idx  glm.cpp.10E994783E0934B9.idx  glm.hpp.87594C48055BD4F7.idx  glx_context.c.1C2C0BAF78C98711.idx  init.c.41F1A1DC892A3C96.idx  input.c.AFA2BAA0FEACB04D.idx  integer.hpp.65A000DC35DF0DDB.idx  internal.h.75AF91B5F33E3EFE.idx  linux_joystick.c.0D14E88E26DBA253.idx  linux_joystick.h.06636BEEBA636A1C.idx  main.cpp.B32A61389653DE99.idx  main.cpp.BB7436BA4CF5D8EE.idx  mappings.h.D5A491667E7BEA86.idx  mat2x2.hpp.1A3EDC2F2C60CC37.idx  (+185 more)
src/: first_app.hpp  main.cpp  starlight_window.cpp  starlight_window.hpp
